--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,4 +1,48 @@
 .container {
   width: 1570px;
   margin: 0 auto;
+  transition: $transition-time;
+}
+
+@media screen and (max-width: 1600px) {
+  .container {
+    width: calc(100% - 136px * 2);
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .container {
+    width: calc(100% - 75px * 2);
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .container {
+    width: calc(100% - 55px * 2);
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1040px) {
+
+  .container {
+    width: calc(100% - 34px);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: calc(100% - 46px * 2);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .container {
+    width: calc(100% - 46px * 2);
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .container {
+    width: calc(100% - 20px * 2);
+  }
 }
