--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -104,3 +104,92 @@
   background-color: $c-gray;
   border-bottom: 2px solid rgba(26, 90, 76, 0.25);
 }
+
+@media screen and (max-width: 1440px) {
+  .events__left-img,
+  .events__right-img {
+    width: 670px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+  .events__left {
+    display: flex;
+    flex-direction: column;
+
+    &-img {
+      margin-bottom: 34px;
+    }
+  }
+
+  .events__right {
+    display: flex;
+    flex-direction: column;
+
+    &-img {
+      margin-bottom: 34px;
+      margin-left: 0;
+    }
+  }
+
+  .events__center {
+    margin-bottom: 210px;
+  }
+
+  .events__center-img {
+    width: 700px;
+    height: 390px;
+    margin-left: 34px;
+  }
+
+  .events__center-title {
+    padding-left: 0;
+    bottom: -306px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+
+  .events__center {
+    margin-bottom: 197px;
+  }
+
+  .events__left-img,
+  .events__right-img {
+    width: 280px;
+    height: 210px;
+  }
+
+  .events__center-img {
+    width: 320px;
+    height: 210px;
+    margin-left: 0;
+  }
+
+  .events__title content {
+    width: 280px;
+  }
+
+  .content__big-heading {
+    font-size: 26px;
+    line-height: 26px;
+    text-align: center;
+  }
+
+  .content__title {
+    width: 280px;
+  }
+
+  .content__heading {
+    justify-content: center;
+  }
+
+  .events__center-title {
+    width: 278px;
+    height: 154px;
+    bottom: -133px;
+    left: 21px;
+    margin-left: 0;
+  }
+}
