--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,11 +1,11 @@
 .footer {
-  // height: 457px;
   padding-top: 49px;
   font-family: $IBM-Plex-Sans-font;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
+  margin-bottom: 85px;
 
   &__container {
     display: flex;
@@ -99,4 +99,107 @@
 .copiright__container {
   display: flex;
   justify-content: space-between;
+  font-family: $IBM-Plex-Sans-font;
+  font-size: 12px;
+  line-height: 12px;
+  margin-bottom: 35px;
+}
+
+@media screen and (max-width: 1280px) {
+  .footer__work-shedule {
+    margin-right: 30px;
+  }
+
+  .footer__contacts {
+    margin-right: 61px;
+  }
+
+  .footer__nav {
+    margin-left: 61px;
+  }
+
+  .footer__nav-left {
+    margin-right: 65px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer__container {
+    flex-wrap: wrap;
+  }
+
+  .footer__media,
+  .footer__work-shedule,
+  .footer__contacts {
+    height: 160px;
+  }
+
+  .footer__stick {
+    background: rgba(26, 90, 76, 0.5);
+    width: 1px;
+    height: 460px;
+    transform: rotate(90deg);
+    position: relative;
+    left: -250px;
+    top: 100px;
+  }
+
+  .footer__nav {
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer__media {
+    display: flex;
+    width: 320px;
+    margin-right: 0;
+  }
+
+  .footer__logo {
+    width: 63px;
+    height: 72px;
+    margin-right: 157px;
+  }
+
+  .footer__media-fb {
+    margin-right: 25px;
+  }
+
+  .footer__work-shedule {
+    margin-right: 15px;
+    width: 135px;
+  }
+
+  .footer__work-title {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .footer__contacts {
+    display: flex;
+    width: 65px;
+  }
+
+  .footer__stick {
+    background: rgba(26, 90, 76, 0.5);
+    width: 1px;
+    height: 280px;
+    transform: rotate(90deg);
+    position: relative;
+    left: -150px;
+    top: 300px;
+  }
+
+  .footer__nav {
+    margin-top: 200px;
+  }
+
+  .copiright__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 24px;
+  }
 }
