--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -49,3 +49,102 @@
   background-image: url("../images/gallery/gallery_6.png");
   width: 370px;
 }
+
+@media screen and (max-width: 1440px) {
+
+  .gallery__photos {
+    justify-content: flex-start;
+  }
+
+  .gallery__photo1 {
+    order: 1;
+    margin-right: 30px;
+  }
+  
+  .gallery__photo2 {
+    order: 2;
+  }
+  
+  .gallery__photo3 {
+    display: none;
+  }
+  
+  .gallery__photo4 {
+    order: 3;
+    margin-right: 30px;
+  }
+  
+  .gallery__photo5 {
+    order: 4;
+  }
+  
+  .gallery__photo6 {
+    display: none;
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+
+  .gallery__photos {
+    flex-wrap: nowrap;
+    overflow: hidden;
+    margin-bottom: 30px;
+  }
+
+  .gallery__photo1 {
+    order: 1;
+    margin-right: 20px;
+    width: 340px;
+    height: 543px;
+  }
+  
+  .gallery__photo2 {
+    display: none;
+  }
+  
+  .gallery__photo3 {
+    display: block;
+    order: 2;
+    width: 340px;
+    height: 543px;
+    margin-right: 20px;
+  }
+  
+  .gallery__photo4 {
+    display: none;
+  }
+  
+  .gallery__photo5 {
+    display: none;
+  }
+
+  .gallery__points {
+    display: flex;
+    justify-content: center;
+  }
+
+  .gallery__point {
+    width: 9px;
+    height: 9px;
+    background-color: #e0e0e0;
+    border-radius: 50%;
+    margin-right: 22px;
+    border: 1px solid #1a5a4c;
+    margin-bottom: 90px;
+  }
+
+  .black__point {
+    background-color: #1a5a4c;
+  }
+}
+
+@media screen and (max-width: 320px) {
+
+  .gallery__photo3 {
+    display: none;
+    width: 280px;
+    height: 410px;
+  }
+
+}
