--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -2,6 +2,7 @@
   background-image: url("../images/subscription.png");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   height: 650px;
   display: flex;
   align-items: center;
@@ -60,4 +61,52 @@
   height: 70px;
   background: $red;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1440px) {
+
+  .subscription {
+    height: 550px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+  .subscription {
+    height: 380px;
+  }
+
+  .subscription__email {
+    width: 395px;
+    margin-right: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .subscription {
+    height: 386px;
+  }
+
+  .subscription__email {
+    width: 233px;
+    height: 50px;
+    margin-right: 0;
+    padding-left: 25px;
+  }
+
+  .subscription__heading {
+    font-size: 36px;
+    line-height: 36px;
+
+  }
+  
+  .subscription__title {
+    font-size: 18px;
+    line-height: 18px;
+  }
+
+  .subscription__button {
+    width: 50px;
+    height: 50px;
+  }
 }
