--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -21,12 +21,22 @@
   width: 870px;
   height: 520px;
   margin-right: 130px;
+  transition: $transition-time;
+
+  &:hover {
+    transform: scale(1.2);
+  }
 }
 
 .events__right-img {
   width: 870px;
   height: 520px;
   margin-left: 130px;
+  transition: $transition-time;
+
+  &:hover {
+    transform: scale(1.2);
+  }
 }
 
 .events__center {
@@ -105,10 +115,15 @@
   border-bottom: 2px solid rgba(26, 90, 76, 0.25);
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 1920px) {
   .events__left-img,
   .events__right-img {
     width: 670px;
+  }
+
+  .events__center-title {
+    bottom: -572px;
+    padding-left: 50px;
   }
 }
 
@@ -144,8 +159,8 @@
   }
 
   .events__center-title {
-    padding-left: 0;
     bottom: -306px;
+    padding-left: 15px;
   }
 }
 
@@ -191,5 +206,6 @@
     bottom: -133px;
     left: 21px;
     margin-left: 0;
+    padding-left: 0;
   }
 }
