--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -84,6 +84,18 @@
 .footer__nav-item {
   text-decoration: none;
   margin-bottom: 20px;
+  transition: 0.5s;
+
+  
+  &:hover {
+    background-color: #fff;
+    // border-bottom: 2px solid #1a5a4c;
+    padding: 2px 0;
+  }
+
+  &:active {
+    transform: translateY(1px);
+  }
 }
 
 .footer__nav-link {
@@ -124,6 +136,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .footer {
+    width: 768px;
+  }
+
   .footer__container {
     flex-wrap: wrap;
   }
