--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -5,21 +5,6 @@
   margin-bottom: 200px;
 }
 
-.gallery__photo1,
-.gallery__photo2,
-.gallery__photo3 {
-  height: 600px;
-  background-repeat: no-repeat;
-  margin-bottom: 30px;
-}
-
-.gallery__photo4,
-.gallery__photo5,
-.gallery__photo6 {
-  height: 360px;
-  background-repeat: no-repeat;
-}
-
 .gallery__photo1 {
   background-image: url("../images/gallery/gallery_1.png");
   width: 370px;
@@ -50,7 +35,32 @@
   width: 370px;
 }
 
-@media screen and (max-width: 1440px) {
+.gallery__photo1,
+.gallery__photo2,
+.gallery__photo3 {
+  height: 600px;
+  background-repeat: no-repeat;
+  margin-bottom: 30px;
+  transition: $transition-time;
+
+  &:hover {
+    transform: scale(1.2);
+  }
+}
+
+.gallery__photo4,
+.gallery__photo5,
+.gallery__photo6 {
+  height: 360px;
+  background-repeat: no-repeat;
+  transition: $transition-time;
+
+  &:hover {
+    transform: scale(1.2);
+  }
+}
+
+@media screen and (max-width: 1920px) {
 
   .gallery__photos {
     justify-content: flex-start;
@@ -85,6 +95,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .gallery {
+    width: 768px;
+  }
 
   .gallery__photos {
     flex-wrap: nowrap;
