--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -59,8 +59,18 @@
 .subscription__button {
   width: 70px;
   height: 70px;
-  background: $red;
+  background-color: $red;
   cursor: pointer;
+  transition: background-color $transition-time;
+
+  &:hover {
+    border: 3px solid $red;
+    background-color: #fff;
+  }
+
+  &:active {
+    transform: translateY(1px);
+  }
 }
 
 @media screen and (max-width: 1440px) {
@@ -85,6 +95,7 @@
 @media screen and (max-width: 768px) {
   .subscription {
     height: 386px;
+    width: 768px;
   }
 
   .subscription__email {
