--- a/src/styles/tickets.scss
+++ b/src/styles/tickets.scss
@@ -1,9 +1,10 @@
 .tickets {
   height: 655px;
+  width: 1245px;
   margin-bottom: 155px;
   background-image: url("../images/header-muzej-1800x1200.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   position: relative;
   left: 675px;
   top: -45px;
@@ -62,6 +63,17 @@
   cursor: pointer;
   padding: 0;
   border: 1px solid #1a5a4c;
+  background-color: #fff;
+  transition: background-color 3s;
+
+  &:hover {
+    border: 1px solid #fff;
+    background-color: #1a5a4c;
+  }
+
+  &:active {
+    transform: translateY(1px);
+  }
 }
 
 .tickets__button-title {
@@ -87,15 +99,29 @@
   align-items: center;
 }
 
+@media screen and (max-width: 1920px) {
+  .tickets {
+    width: 825px;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .tickets {
+    width: 765px;
+  }
+}
+
 @media screen and (max-width: 1280px) {
   .tickets {
     background-size: auto;
+    width: 605px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .tickets {
     left: 263px;
+    width: 500px;
 
     &__heading {
       font-size: 55px;
@@ -112,7 +138,7 @@
   .tickets {
     position: static;
     height: 300px;
-    // width: 320px;
+    width: 320px;
     background-size: cover;
     background-image: none;
     margin-bottom: 253px;
