--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -4,12 +4,13 @@
 
 .burger {
   position: absolute;
-  left: 10px;
-  top: 10px;
+  left: -100px;
+  top: 90px;
   width: 25px;
-  height: 12px;
+  height: 30px;
   cursor: pointer;
   z-index: 2;
+  padding-top: 10px;
   transition: left $transition-time,
     top $transition-time;
 }
@@ -30,10 +31,6 @@
   top: -7px;
   transition: top 300ms 300ms,
     transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.burger span {
-  top: 20px;
 }
 
 .burger span:after {
@@ -105,13 +102,32 @@
   margin-bottom: 0;
 }
 
+.burger__search {
+  cursor: pointer;
+  transition: 1s;
+  &:hover {
+    transform: scale(1.2);
+  }
+}
+
 .burger__nav-list {
-  margin-right: 229px;
+  margin-right: 180px;
 }
 
 .burger__nav-item {
   list-style-type: none;
   margin-right: 50px;
+  padding: 2px;
+  transition: 0.5s;
+
+  &:hover {
+    background-color: #fff;
+    border-bottom: 2px solid #1a5a4c;
+  }
+
+  &:active {
+    transform: translateY(1px);
+  }
 }
 
 .burger__nav-link {
@@ -128,14 +144,22 @@
 
   .burger {
     left: 0;
-    top: 30px;
+    top: 90px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .burger {
+    left: 20px;
+    top: 90px;
   }
 }
 
 @media screen and (max-width: 768px) {
 
   .burger {
-    top: 35px;
+    left: 20;
+    top: 90px;
   }
 
   .burger__menu {
