gallery and subscrigition added

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -41,6 +41,7 @@
     &--reverse {
       display: flex;
       justify-content: flex-end;
+      margin-bottom: 100px;
 
       & .event__image {
         margin-right: 0;
@@ -123,5 +124,42 @@
     @media (max-width: 768px) {
       width: 280px;
     }
+  }
+
+  &__single {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__panorama {
+    &-img {
+      width: 100vw;
+    }
+  }
+
+  &__info_wide {
+    box-sizing: border-box;
+    padding: 45px 100px 50px;
+    width: 570px;
+    height: 204px;
+    position: relative;
+    top: -105px;
+    background-color: $colorWhite;
+    box-shadow: 0 3px 0 0 rgba(26, 90, 76, 0.25);
+
+    @media (max-width: 768px) {
+      width: 278px;
+      height: 154px;
+      padding: 25px 20px 34px;
+      top: -55px;
+    }
+  }
+
+  &__schedule_wide {
+    display: flex;
+    padding-bottom: 15px;
+    justify-content: space-between;
+    align-items: center;
   }
 }
