--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -8,3 +8,5 @@ $colorTexts: #4e4e4e;
 $colorEvents: #687480;
 $colorElemens: #1a5a4c;
 $colorDecor: #f14a27;
+$colorWhite: #fff;
+$colorBlack: #000;
