all blocks and adaptive complited

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -46,7 +46,7 @@ h3 {
 
 h4 {
   @include titles(14px, 400, 14px);
-
+  font-family: $fontIBMPlexSans;
   @include tablet_768 {
     @include titles(16px, 400, 16px);
   }
