--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,12 +6,7 @@
 @import "./blocks/event.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/subscribtion.scss";
-
-// screen 1920 -> content 1570
-// screen 1440 -> content 1170
-// screen 1280 -> content 1170
-// screen 768 -> content 700
-// screen 320 -> content 280
+@import "./blocks/footer.scss";
 
 html {
   scroll-behavior: smooth;
@@ -24,16 +19,7 @@ body {
 }
 
 .page-header {
-  // margin-bottom: 780px;
   margin-bottom: 200px;
-
-  // @media (max-width: 1080px) {
-  //   margin-bottom: 500px;
-  // }
-
-  // @media (max-width: 768px) {
-  //   margin-bottom: 600px;
-  // }
 }
 
 .main__event {
