--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -84,13 +84,12 @@
 .footer__nav-item {
   text-decoration: none;
   margin-bottom: 20px;
-  transition: 0.5s;
+  transition: transform 0.5s;
 
   
   &:hover {
     background-color: #fff;
-    // border-bottom: 2px solid #1a5a4c;
-    padding: 2px 0;
+    transform: scale(1.1);
   }
 
   &:active {
