--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -11,8 +11,6 @@
   cursor: pointer;
   z-index: 2;
   padding-top: 10px;
-  transition: left $transition-time,
-    top $transition-time;
 }
 
 .burger span,
@@ -23,7 +21,6 @@
   height: 4px;
   background: #333;
   display: block;
-  transition: 0.3s;
 }
 
 .burger span:before {
@@ -104,7 +101,7 @@
 
 .burger__search {
   cursor: pointer;
-  transition: 1s;
+  transition: transform 1s;
   &:hover {
     transform: scale(1.2);
   }
@@ -118,11 +115,11 @@
   list-style-type: none;
   margin-right: 50px;
   padding: 2px;
-  transition: 0.5s;
+  transition: transform 0.5s;
 
   &:hover {
     background-color: #fff;
-    border-bottom: 2px solid #1a5a4c;
+    transform: scale(1.1);
   }
 
   &:active {
