page was refreshed

--- a/src/styles/footer/footerTop.scss
+++ b/src/styles/footer/footerTop.scss
@@ -1,14 +1,17 @@
+.page {
+  &__footer {
+    margin-top: 70px;
+  }
+}
+
 .footer-top {
   background-image: url("../images/writers.png");
-  margin-bottom: 50px;
   height: 380px;
   width: 100vw;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center top;
   position: relative;
-
-  
 
   @media (min-width:570px) {
     background-position: center center;
