footer menu fixed

--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -204,7 +204,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
 
   .burger {
     width: 30px;
@@ -239,4 +239,11 @@
     line-height: 25px;
   }
   
+  .burger__menu {
+    width: auto;
+  }
+
+  .burger__menu.animate {
+    width: auto;
+  }
 }
