--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -164,8 +164,10 @@
   }
 }
 
-@media screen and (max-width: 320px) {
-
+@media screen and (max-width: 500px) {
+  .events {
+    width: auto;
+  }
   .events__center {
     margin-bottom: 197px;
   }
@@ -177,7 +179,7 @@
   }
 
   .events__center-img {
-    width: 320px;
+    width: auto;
     height: 210px;
     margin-left: 0;
   }
@@ -204,7 +206,7 @@
     width: 278px;
     height: 154px;
     bottom: -133px;
-    left: 21px;
+    left: 46px;
     margin-left: 0;
     padding-left: 0;
   }
