--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -116,7 +116,7 @@
   margin-bottom: 35px;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1281px) {
   .footer__work-shedule {
     margin-right: 30px;
   }
@@ -134,7 +134,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 769px) {
   .footer {
     width: 768px;
   }
@@ -165,10 +165,19 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
+  .footer__container {
+    flex-direction: column;
+    padding-left: 46px;
+    margin: 0;
+    font-size: 19px;
+    width: auto;
+  }
+
   .footer__media {
     display: flex;
     width: 320px;
+    height: 120px;
     margin-right: 0;
   }
 
@@ -183,32 +192,43 @@
   }
 
   .footer__work-shedule {
-    margin-right: 15px;
-    width: 135px;
+    width: 320px;
+    height: 260px;
+    margin: 0;
   }
 
   .footer__work-title {
-    display: flex;
-    flex-wrap: wrap;
+    width: 320px;
+  }
+
+  .footer__grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-right: 10px;
+    grid-column-gap: 5px;
   }
 
   .footer__contacts {
     display: flex;
-    width: 65px;
+    width: 320px;
+    height: 190px;
+    margin: 0;
   }
 
   .footer__stick {
-    background: rgba(26, 90, 76, 0.5);
-    width: 1px;
-    height: 280px;
-    transform: rotate(90deg);
-    position: relative;
-    left: -150px;
-    top: 300px;
+    display: none;
   }
 
   .footer__nav {
-    margin-top: 200px;
+    width: 320px;
+    margin: 0;
+    display: grid;
+    justify-content: normal;
+  }
+
+  .footer__nav-link {
+    font-size: 19px;
+
   }
 
   .copiright__container {
@@ -216,5 +236,6 @@
     flex-direction: column;
     align-items: center;
     line-height: 24px;
+    width: 320px;
   }
 }
