--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -152,7 +152,11 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
+
+  .gallery {
+    width: auto;
+  }
 
   .gallery__photo3 {
     display: none;
