--- a/src/styles/tickets.scss
+++ b/src/styles/tickets.scss
@@ -134,18 +134,18 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
   .tickets {
     position: static;
     height: 300px;
-    width: 320px;
+    width: auto;
     background-size: cover;
     background-image: none;
     margin-bottom: 253px;
   }
 
   .tickets__events {
-    width: 320px;
+    width: auto;
     height: 300px;
     position: static;
     background-image: url("../images/header-muzej-1800x1200.png");
