mistakes were fixded

--- a/src/styles/galery/galeryBottom.scss
+++ b/src/styles/galery/galeryBottom.scss
@@ -35,7 +35,7 @@
 }
 
 .page {
-  &--has-choosed {
+  &--is-active {
     background: #1a5a4C;
   }
 }
@@ -243,6 +243,6 @@
   }
 }
 
-.cell-fit--size {
+.image-cell--size {
   width: 100%;
 }
