--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -156,7 +156,7 @@
   user-select: none;
 }
 
-#menuToggle a
+.menuToggle
 {
   text-decoration: none;
   color: #232323;
@@ -164,13 +164,13 @@
   transition: color 0.3s ease;
 }
 
-#menuToggle a:hover
+.menuToggle .toggle-link:hover
 {
   color: tomato;
 }
 
 
-#menuToggle input
+.menuToggle input
 {
   display: block;
   width: 40px;
@@ -188,7 +188,7 @@
 }
 
 
-#menuToggle span
+.menuToggle span
 {
   display: block;
   width: 33px;
@@ -208,17 +208,17 @@
               opacity 0.55s ease;
 }
 
-#menuToggle span:first-child
+.menuToggle span:first-child
 {
   transform-origin: 0% 0%;
 }
 
-#menuToggle span:nth-last-child(2)
+.menuToggle span:nth-last-child(2)
 {
   transform-origin: 0% 100%;
 }
 
-#menuToggle input:checked ~ span
+.menuToggle input:checked ~ span
 {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
@@ -236,7 +236,7 @@
   transform: rotate(-45deg) translate(0, -1px);
 }
 
-#menu
+#menu-list
 {
   position: absolute;
   width: 300px;
@@ -253,7 +253,7 @@
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-#menu li
+#menu-list li
 {
   opacity: none;
   padding: 10px 0;
