--- a/src/styles/footer/footerBottom.scss
+++ b/src/styles/footer/footerBottom.scss
@@ -1,6 +1,7 @@
 .footer-bottom {
   padding: 50px 120px 35px;
   position: relative;
+  top: 50px;
 
   @media (min-width:320px) {
     display: flex;
