Fixed: according BEM methodology

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 
 @import "centered";
 @import "bottom-margined";
+@import "paragraph-margined";
 @import "lection";
 @import "description";
 @import "event";
