--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
-$c-gray: #eee;
+$main-color: #fff;
+$extra-color: #0075ff;
+$main-text-color: #3e3e3e;
+$extra-text-color: #9fadc2;
+$btn-color: #005ecc;
+
+$small-screen-breakpoint: 480px;
+$medium-screen-breakpoint: 768px;
+$large-screen-breakpoint: 1024px;
+
+$logo-width: 130px;
+$logo-height: 75px;
+
+$hover-durations: 0.6s;
