--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -14,18 +14,15 @@
   }
 
   &__logo {
-   
     z-index: 1;
   }
 
-  // &__right {
-   
+  &__right {
+    height: 655px;
 
-  //   height: 655px;
-
-  //   background: url("../images/header/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png") no-repeat center;
-  //   background-size: cover;
-  // }
+    background: url("../images/header/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png") no-repeat center;
+    background-size: cover;
+  }
 
   &__main {
     margin-top: 172px;
