--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,44 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin onMobile {
+  @media (min-width: $breakPointMobile) {
+    @content;
+  }
+}
+
+@mixin onTablet {
+  @media (min-width: $breakPointTablet) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: $breakPointDesktop) {
+    @content;
+  }
+}
+
+@mixin onDesktopLarge {
+  @media (min-width: $breakPointDesktopL) {
+    @content;
+  }
+}
+
+@mixin title {
+  font-family: $fontMontserrat;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+  margin-bottom: 40px;
+  color: $darkColor;
+
+  @include onTablet {
+    font-size: 48px;
+    line-height: 48px;
+    text-align: left;
+    margin-bottom: 50px;
+  }
+
+  @include onDesktop {
+    margin-bottom: 60px;
   }
 }
