--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
 @import "utils";
-@import "fonts";
-@import "typography";
+@import "reset";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/header";
+@import "./blocks/content";
+
+@import "./blocks/current";
+@import "./blocks/event";
+@import "./blocks/lecture";
