--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -9,7 +9,7 @@
     gap: 20px;
   }
 
-  &__first {
+  &--first {
     margin-bottom: 100px;
     
     @media (max-width: 480px) {
@@ -17,7 +17,7 @@
     }
   }
   
-  &__second {
+  &--second {
     grid-template-columns: 1fr 2fr;
     @media (max-width: 1024px) {
       grid-template-columns: 1fr;
