--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,3 +1,169 @@
 .footer {
-  color: aliceblue;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  color: #0f0e08;
+
+  &--wrapper {
+    position: relative;
+    max-width: 1610px;
+    margin: 0 auto 36px;
+    padding: 0 20px;
+  }
+
+  &__content {
+    display: grid;
+    grid-template-columns: 1fr 1px 1fr;
+    justify-content: center;
+    gap: 100px;
+    margin-bottom: 100px;
+
+    @media (max-width: 1440px) {
+      gap: 50px;
+    }
+
+    @media (max-width: 1024px) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  &__logos {
+    @media (max-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 40px;
+    }
+  }
+
+  &__logo-socials {
+    display: flex;
+    gap: 26px;
+  }
+
+  &__logo {
+    margin-bottom: 60px;
+
+    @media (max-width: 768px) {
+      margin-bottom: 0;
+    }
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width: 1024px) {
+      justify-content: start;
+      gap: 80px;
+    }
+
+    @media (max-width: 768px) {
+      gap: 5%;
+    }
+  }
+
+  &__title {
+    font-weight: inherit;
+    margin-bottom: 20px;
+  }
+
+  &__schedule {
+    margin-left: 138px;
+
+    @media (max-width: 1279px) {
+      margin-left: 50px;
+    }
+
+    @media (max-width: 768px) {
+      margin: 0;
+    }
+  }
+
+  &__schedule-extra {
+    width: 130px;
+  }
+
+  &__link {
+    display: block;
+    color: #0f0e08;
+  }
+
+  &__list {
+    & > :nth-child(n) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__right-side {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    @media (max-width: 1024px) {
+      display: flex;
+      margin-left: calc(60px + 50px);
+      gap: 100px;
+    }
+
+    @media (max-width: 768px) {
+      margin: 0;
+      gap: 50px;
+    }
+
+    @media (max-width: 320px) {
+      gap: 0;
+      justify-content: space-between;
+    }
+  }
+
+  &__left-side {
+    position: relative;
+    display: grid;
+    grid-template-columns: 60px 1fr;
+
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  &__stick {
+    width: 1px;
+    height: 100%;
+    background: rgba(26, 90, 76, 0.5);
+
+    @media (max-width: 1024px) {
+      width: 460px;
+      height: 1px;
+      margin-left: 110px;
+    }
+
+    @media (max-width: 768px) {
+      width: 100%;
+      margin: 0;
+    }
+  }
+
+  &__btn {
+    display: none;
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    border: 1px solid #1a5a4c;
+    border-radius: 50%;
+    bottom: 0;
+    right: 0;
+
+    @media (max-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+  }
 }
