--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -15,11 +15,19 @@
     height: 380px;
   }
 
+  &--wrapper {
+    margin-bottom: 50px;
+  }
+
   &__title {
     margin-bottom: 20px;
     font-weight: bold;
     font-size: 48px;
     line-height: 100%;
+    
+    @media (max-width: 768px) {
+      font-size: 36px;
+    }
   }
 
   &__text {
