--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,67 +1,24 @@
 .nav {
-  padding: 150px 120px;
-  
-  font-size: 12px;
-  font-weight: bold;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  color: $main-color;
-
-  @media (max-width: $medium-screen-breakpoint) {
-    padding: 150px 20px;
-  }
-  
-  &__wrapper {
-    max-width: 1020px;
-    margin: 0 auto;
-  }
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
 
   &__list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
     list-style: none;
-  }
-
-  &__item {
-    margin-bottom: 32px;
-
-    &:last-child {
-      margin-bottom: 48px;
-    }
   }
 
   &__link {
     position: relative;
+    padding: 20px 0;
     text-decoration: none;
-    font-size: 22px;
-    line-height: 22px;
-    color: $main-color;
-    
-    &:after {
-      content: "";
-      position: absolute;
-      display: block;
-
-      width: 100%;
-      height: 1px;
-
-      opacity: 0;
-      background-color: $main-color;
-      transform: translateX(-50%);
-      transition: $hover-durations ease;
-    }
-    &:hover::after {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
-
-  &__number {
-    margin-bottom: 16px;
-  }
-
-  &__phone-text {
-    display: inline;
-    width: 100%;
-    padding-bottom: 8px;
-    border-bottom: 1px solid $main-color;
+    font-size: 14px;
+    line-height: 14px;
+    color: #0f0e08;
   }
 }
