--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import "utils";
-@import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "_normalize";
+@import "_reset";
+@import "header";
+@import "menu";
+@import "logo";
+@import "nav";
+@import "container";
+@import "capital";
+@import "button";
+@import "events";
+@import "description";
+@import "lecture";
+@import "gallery";
+@import "subscription";
+@import "footer";
