--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,74 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+@mixin linkHover($_toValue: $text-color, $_toValue2: scale(1.1)) {
+  transition: color 0.3s, transform 0.3s;
   &:hover {
-    #{$_property}: $_toValue;
+    color: $_toValue;
+    transform: $_toValue2;
+  }
+}
+
+@mixin imgHover($scale: scale(1.05), $tran:translateY(-10px)) {
+  transition: transform 0.5s, box-shadow 0.5s, left 0.7s;
+  &:hover {
+    transform: $scale $tran;
+    box-shadow: 1px 1px 10px 5px grey;
+  }
+}
+
+@mixin btnHover($_toValue: brightness(120%)) {
+  transition: filter 0.3s;
+  &:hover {
+    filter: $_toValue;
+  }
+}
+
+@mixin logoHover($transf: scale(1.3)) {
+  transition: transform 0.3s;
+  &:hover {
+    transform: $transf;
+  }
+}
+
+@mixin largeScreen {
+  @media (min-width: 1570px) {
+    @content;
+  }
+}
+
+@mixin screenMed {
+  @media (max-width: 1279px) {
+    @content;
+  }
+}
+
+@mixin screenTablet {
+  @media (max-width: 1024px) {
+    @content;
+  }
+}
+@mixin screenMob {
+  @media (max-width: 760px) {
+    @content;
+  }
+}
+
+@mixin screenMobMin {
+  @media (min-width: 759px) {
+    @content;
+  }
+}
+
+@mixin screenMinMedium {
+  @media (min-width: 1278px) {
+    @content;
+  }
+}
+
+@mixin square-position {
+  left: 25px;
+  bottom: calc((#{$squareEventsLine-height} / 2 - #{$squareEventsHeight}));
+  @include screenMob {
+    left: 10px;
+    bottom: calc( #{$squareEventsLine-heightMob} 
+    / 2 - #{$squareEventsHeightMob});
   }
 }
