--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,3 +12,4 @@
 @import "./blocks/gallery.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/title.scss";
