--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -1,4 +1,15 @@
 html {
-  font-family: "Montserrat", sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  line-height: 150%;
+  font-weight: normal;
   scroll-behavior: smooth;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Montserrat", sans-serif;
+  line-height: 150%;
 }
