--- a/src/styles/blocks/burger-menu.scss
+++ b/src/styles/blocks/burger-menu.scss
@@ -1,14 +1,21 @@
 .burger-menu {
+  width: 100%;
+  position: relative;
+
   &__nav {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    
     height: 100px;
+    transform: translateY(-200%);
+    
+    background-color: white;
     transition: $hover-durations;
-    transform: translateY(-100%);
-    background-color: #fff;
+
+    @media (max-width: $large-screen-breakpoint) {
+      height: 350px;
+    }
   }
 
   &__label {
@@ -16,34 +23,54 @@
     display: block;
     cursor: pointer;
 
+    @include square(18px);
     margin-top: 24px;
-    width: 24px;
-    height: 24px;
 
     background: url("../images/header/burger-menu.svg") no-repeat center;
-    z-index: 2;
-    transition: background-color $hover-durations, transform 0.5s;
+    background-size: contain;
 
-    &:hover {
-      background-color: #1a5a4c;
-      background-image: url("../images/header/Icon-Burger-menu.svg");
-    }
+    transition: transform 0.6s;
+    z-index: 2;
+  }
+
+  &__search {
+    position: fixed;
+    top: 30px;
+    right: 10px;
+    padding: 10px;
+    
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+    cursor: pointer;
+    z-index: 3;
   }
 
   &__check-box {
     display: none;
     
     &:checked ~ .burger-menu__nav {
-      box-shadow: 0 1px 10px rgba(0,0,0,0.2);
       transform: translate(0);
+      box-shadow: 0 1px 10px rgba(0,0,0,0.2);
+    }
+
+    &:checked ~ .burger-menu__search {
+      visibility: visible;
+      opacity: 1;
     }
 
     &:checked + .burger-menu__label {
       position: fixed;
-      z-index: 3;
-      background-color: #1a5a4c;
-      background-image: url("../images/header/header-btn.svg");
       transform: rotate(-90deg);
+      display: flex;
+
+      background: url("../images/header/free-icon-next-130884.svg") no-repeat center;
+      background-size: cover;
+      z-index: 3;
+
+      &:hover {
+        transform: rotate(-90deg);
+      }
     }
   }
 }
