--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,46 +1,56 @@
 .event {
   display: grid;
   align-items: center;
-  grid-template-columns: 2fr 1fr;
   gap: 130px;
 
-  @media (max-width: 1024px) {
-    grid-template-columns: 1fr;
+  @media (max-width: 1280px) {
+    align-items: flex-start;
     gap: 20px;
   }
 
   &--first {
+    grid-template-areas: "image descriptions";
     margin-bottom: 100px;
     
-    @media (max-width: 480px) {
+    @media (max-width: $large-screen-breakpoint) {
+      grid-template-areas: "image" "descriptions";
       margin-bottom: 60px;
     }
   }
   
   &--second {
-    grid-template-columns: 1fr 2fr;
-    @media (max-width: 1024px) {
-      grid-template-columns: 1fr;
+    grid-template-areas: "descriptions image";
+
+    @media (max-width: $large-screen-breakpoint) {
+      grid-template-areas: "image" "descriptions";
     }
   }
 
   &__img {
+    grid-area: image;
     width: 100%;
     height: 520px;
     object-fit: cover;
+    transition: 1s;
 
-    @media (max-width: 480px) {
+    @media (max-width: $small-screen-breakpoint) {
       height: 210px;
+    }
+
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
   }
 
   &__description {
+    grid-area: descriptions;
     max-width: 370px;
-    font-family: "IBM Plex Sans", sans-serif;
 
     &--second {
       justify-self: end;
-      @media (max-width: 1024px) {
+
+      @media (max-width: $large-screen-breakpoint) {
         justify-self: start;
         grid-row: 2;
       }
@@ -49,54 +59,63 @@
 
   &__exhibition {
     display: flex;
-    
     align-items: baseline;
     margin-bottom: 30px;
-    font-size: 14px;
 
-    @media (max-width: 480px) {
+    @media (max-width: 1280px) {
+      margin-top: 50px;
+    }
+
+    @media (max-width: 1024px) {
+      margin-top: 0;
+    }
+
+    @media (max-width: $small-screen-breakpoint) {
       margin-bottom: 10px;
     }
   }
 
   &__exhibition-title {
     margin-right: 26px;
+
     text-transform: uppercase;
     font-weight: 500;
     line-height: 100%;
-    color: #687480;
+    color: $extra-text-color;
   }
 
   &__exhibition-date {
     font-weight: 700;
-    line-height: 150%;
-    color: #1a5a4c;
+    color: $main-color;
   }
 
   &__description-title {
+    display: flex;
+    align-items: center;
+    
     position: relative;
     width: max-content;
     margin-bottom: 15px;
+
     font-size: 36px;
     font-weight: normal;
-    color: #0f0e08;
+    color: $main-text-color;
 
-    @media (max-width: 1024px) {
+    @media (max-width: $large-screen-breakpoint) {
       font-size: 28px;
     }
 
     &::after {
       content: "";
       position: absolute;
-      top: 13px;
       left: calc(100% + 20px);
-      width: 15px;
-      height: 15px;
+
+      @include square(15px);
+      
       background-color: #f14a27;
 
-      @media (max-width: 480px) {
-        height: 10px;
-        width: 10px;
+      @media (max-width: $small-screen-breakpoint) {
+        @include square(10px);
       }
     }
   }
@@ -104,6 +123,5 @@
   &__description-text {
     font-weight: 300;
     font-size: 16px;
-    line-height: 150%;
   }
 }
