--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -1,4 +1,8 @@
 .lecture {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+
   position: relative;
   height: 674px;
   
@@ -13,12 +17,12 @@
     height: 550px;
   }
 
-  @media (max-width: 1024px) {
+  @media (max-width: $large-screen-breakpoint) {
     height: 390px;
     margin: 0 20px;
   }
 
-  @media (max-width: 480px) {
+  @media (max-width: $small-screen-breakpoint) {
     height: 210px;
     margin: 0;
   }
@@ -26,7 +30,7 @@
   &--wrapper {
     margin-bottom: 316px;
 
-    @media (max-width: 480px) {
+    @media (max-width: $small-screen-breakpoint) {
       margin-bottom: 200px;
     }
   }
@@ -37,17 +41,20 @@
     align-items: center;
     flex-direction: column;
     
-    position: absolute;
-    top: 100%;
-
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 570px;
     height: 204px;
+    
+    transform: translateY(50%);
     background-color: white;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+    transition: 1s;
+
+    &:hover {
+      transform: translateY(40%);
+    }
     
-    @media (max-width: 768px) {
+    @media (max-width: $medium-screen-breakpoint) {
       width: 280px;
       height: 154px;
     }
@@ -55,28 +62,28 @@
 
   &__info {
     display: flex;
+    align-items: baseline;
   }
   
   &__title {
     margin-right: 146px;
     margin-bottom: 16px;
+    
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
     text-transform: uppercase;
-    color: #687480;
+    color: $extra-text-color;
 
-    @media (max-width: 768px) {
+    @media (max-width: $medium-screen-breakpoint) {
       margin-right: 14px;
     }
   }
 
   &__date {
-    font-family: "IBM Plex Sans", sans-serif;
     font-weight: bold;
     font-size: 16px;
-    line-height: 150%;
-    color: #1a5a4c;
+    color: $main-color;
   }
 
   &__text {
@@ -84,9 +91,9 @@
     font-weight: normal;
     font-size: 36px;
     line-height: 100%;
-    color: #0f0e08;
+    color: $main-text-color;
 
-    @media (max-width: 768px) {
+    @media (max-width: $medium-screen-breakpoint) {
       font-size: 28px;
       width: 236px;
     }
