--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,24 +1,58 @@
 .nav {
-  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: 500;
+  z-index: 2;
 
   &__list {
     display: flex;
+    justify-self: center;
     align-items: center;
-    justify-content: center;
-    gap: 30px;
+    gap: 10px;
+
     list-style: none;
+
+    @media (max-width: $large-screen-breakpoint) {
+      flex-direction: column;
+      gap: 0;
+    }
   }
 
   &__link {
+    display: block;
     position: relative;
-    padding: 20px 0;
-    text-decoration: none;
-    font-size: 14px;
+    padding: 15px;
+    
     line-height: 14px;
-    color: #0f0e08;
+    font-weight: 500;
+    text-decoration: none;
+    color: $main-text-color;
+
+    transition: all 0.4s cubic-bezier(0.2, 0, 0, 1);
+    
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 0;
+      height: 0;
+      right: 0;
+      left: 0;
+      background-color: $main-color;
+      transition: all 0.4s cubic-bezier(0.2, 0, 0, 1);
+      transform-origin: bottom center;
+      z-index: -1;
+    }
+
+    &:hover {
+      color: white;
+      
+      &:after {
+        right: 0;
+        left: 0;
+        height: 100%;
+      }
+    }
   }
 }
