--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -11,7 +11,7 @@
   background: url("../images/subscription.png") no-repeat center;
   background-size: cover;
 
-  @media (max-width: 768px) {
+  @media (max-width: $medium-screen-breakpoint) {
     height: 380px;
   }
 
@@ -21,18 +21,10 @@
 
   &__title {
     margin-bottom: 20px;
-    font-weight: bold;
-    font-size: 48px;
-    line-height: 100%;
-    
-    @media (max-width: 768px) {
-      font-size: 36px;
-    }
   }
 
   &__text {
     margin-bottom: 66px;
-    font-weight: normal;
     font-size: 18px;
     line-height: 100%;
   }
@@ -46,23 +38,42 @@
     height: 70px;
     margin-right: 30px;
     padding-left: 35px;
+    
     font-family: inherit;
     font-size: 14px;
 
-    @media (max-width: 768px) {
+    @media (max-width: $medium-screen-breakpoint) {
       width: 233px;
       margin-right: 0;
     }
   }
 
   &__btn {
-    width: 70px;
-    height: 70px;
-
+    @include square(70px);
     background-color: #f14a27;
     background-image: url("../images/subscription.svg");
     background-position: center;
     background-repeat: no-repeat;
     border: 2px solid transparent;
+    transition: $hover-durations;
+
+    &:before {
+      content: "";
+      display: block;
+      height: 100%;
+      width: 100%;
+      background: url("../images/header/header-btn.svg") no-repeat;
+      background-position: -150%;
+      transition: $hover-durations;
+    }
+
+    &:hover {
+      background-color: $main-color;
+      background-position: 150%;
+
+      &::before {
+        background-position: center;
+      }
+    }
   }
 }
