--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,8 +1,6 @@
-$main-color: #fff;
-$extra-color: #0075ff;
-$main-text-color: #3e3e3e;
-$extra-text-color: #9fadc2;
-$btn-color: #005ecc;
+$main-color: #1a5a4c;
+$main-text-color: #0f0e08;
+$extra-text-color: #687480;
 
 $small-screen-breakpoint: 480px;
 $medium-screen-breakpoint: 768px;
@@ -11,4 +9,4 @@ $large-screen-breakpoint: 1024px;
 $logo-width: 130px;
 $logo-height: 75px;
 
-$hover-durations: 0.6s;
+$hover-durations: 0.4s;
