--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,12 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./blocks/header.scss";
+@import "./utils/reset.scss";
+@import "./blocks/main.scss";
+@import "./blocks/background.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscribe.scss";
 
 body {
   background: $c-gray;
