--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./reset";
+@import "./blocks/header.scss";
+@import "./blocks/section.scss";
+@import "./blocks/events.scss";
+@import "./blocks/topic.scss";
+@import "./blocks/top.scss";
+@import "./blocks/about.scss";
+@import "./blocks/description.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/follow.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/info.scss";
+@import "./blocks/timetable.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/nav.scss";
