Base of landing

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,9 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%Montserrat {
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+}
+
+%IBM {
+  font-family: IBM Plex Sans, sans-serif;
   font-weight: 400;
 }
