--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -30,7 +30,7 @@
     width: 24px;
     height: 24px;
     top: 39px;
-    left: 0;
+    left: -55px;
     cursor: pointer;
     z-index: 2;
     transition: background-color 0.3s, transform 0.3s;
@@ -58,6 +58,7 @@
 
   &__toggler {
     display: none;
+    margin-left: 50px;
 
     &:checked ~ .header__btn:hover {
       transform: scale(1.3);
